--- a/src/routes/our-work/our-work.css
+++ b/src/routes/our-work/our-work.css
@@ -1,3 +1,31 @@
+/* clear fix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- .grid-item ---- */
+
+.grid-sizer,
+.client-card {
+  width: 33.333%;
+}
+
+.client-card {
+  float: left;
+}
+
+.client-card img {
+  display: block;
+  max-width: 100%;
+}
+
+
+
+
+
+
 .clients:after {
   content: '';
   display: block;
