--- a/src/lib/components/Carousel/carousel.css
+++ b/src/lib/components/Carousel/carousel.css
@@ -1,10 +1,97 @@
-.embla {
+.custom-carousel .sc-carousel__content-container {
+  padding-bottom: var(--spacing-l);
+}
+.custom-carousel .sc-carousel__arrow-container {
+  position: absolute;
+  bottom: 0;
+  width: 35px;
+  height: 35px;
+  padding: 0 !important;
+}
+
+.custom-carousel .sc-carousel-button.sc-carousel-arrow__circle {
+  width: 35px;
+  height: 35px;
+  background-color: var(--cool-gray);
+  transition: all 0.3s;
+  outline: none;
+}
+.custom-carousel .sc-carousel-button.sc-carousel-arrow__circle:hover {
+  background-color: var(--orange);
+  opacity: 0.7;
+}
+.custom-carousel .sc-carousel-arrow__arrow {
+  border: none !important;
+  width: 100%;
+  height: 100%;
+  background: url(../../assets/images/icons/slider-arrow.svg) no-repeat 50% 50%;
+}
+.custom-carousel .sc-carousel-arrow__arrow-prev {
+  transform: rotate(180deg) !important;
+}
+.custom-carousel .sc-carousel-arrow__arrow-next {
+  transform: rotate(0) !important;
+}
+
+.home .custom-carousel {
+  border-top: 1px solid #A29C9A;
+}
+
+.custom-carousel .slide__meta {
+  margin-top: var(--spacing-s);
+  display: inline-flex;
+  gap: var(--spacing-s);
+}
+
+@media (max-width: 1279px) {
+  .custom-carousel .sc-carousel__arrow-container:first-child {
+    right: calc(50% + var(--spacing-xs) / 2);
+  }
+  .custom-carousel .sc-carousel__arrow-container:last-child {
+    left: calc(50% + var(--spacing-xs) / 2);
+  }
+}
+@media (max-width: 767px) {
+  .custom-carousel {
+    padding-top: var(--spacing-m);
+  }
+}
+@media (min-width: 768px) {
+  .custom-carousel {
     overflow: hidden;
   }
-  .embla__container {
-    display: flex;
+  .custom-carousel .sc-carousel__pages-window {
+    margin-left: calc(var(--spacing-xl-neg) / 2);
+    margin-right: calc(var(--spacing-xl-neg) / 2);
   }
-  .embla__slide {
-    flex: 0 0 100%;
-    min-width: 0;
+  .custom-carousel .slide {
+    padding-left: calc(var(--spacing-xl) / 2);
+    padding-right: calc(var(--spacing-xl) / 2);
   }
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .custom-carousel {
+    padding-top: calc(var(--spacing-m) + var(--spacing-s));
+  }
+  .custom-carousel .slide__meta {
+    font-size: 16px;
+  }
+  .custom-carousel .slide__meta .text-grey {
+    font-size: 14px;
+  }
+}
+@media (min-width: 1280px) {
+  .custom-carousel .sc-carousel__arrow-container:first-child {
+    right: calc(35px + var(--spacing-xs));
+  }
+  .custom-carousel .sc-carousel__arrow-container:last-child {
+    right: 0;
+  }
+  .custom-carousel {
+    padding-top: var(--spacing-xl);
+  }
+  
+  .custom-carousel .slide__meta {
+    font-size: 18px;
+  }
+}
