--- a/src/lib/assets/css/variables.css
+++ b/src/lib/assets/css/variables.css
@@ -50,6 +50,7 @@
 
   --white:            #fff;
   --white-pale:       #F9FAFB;
+  --black:            #000000;
 
   /* FONT COLORS */
   --text-dark:        #100F08;
