--- a/src/lib/components/Carousel/carousel.css
+++ b/src/lib/components/Carousel/carousel.css
@@ -43,6 +43,19 @@
   gap: var(--spacing-s);
 }
 
+.custom-carousel .slide__img {
+  width: 100%;
+  height: 276px;
+  border: 1px solid var(--black);
+}
+.custom-carousel .slide__img img {
+  max-width: none;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
 @media (max-width: 1279px) {
   .custom-carousel .sc-carousel__arrow-container:first-child {
     right: calc(50% + var(--spacing-xs) / 2);
@@ -70,7 +83,7 @@
   }
 }
 @media (min-width: 768px) and (max-width: 1279px) {
-  .custom-carousel {
+  .home .custom-carousel {
     padding-top: calc(var(--spacing-m) + var(--spacing-s));
   }
   .custom-carousel .slide__meta {
@@ -81,15 +94,34 @@
   }
 }
 @media (min-width: 1280px) {
+  .home .custom-carousel {
+    padding-top: var(--spacing-l);
+    
+  }
+  .home .custom-slider-wrap {
+    width: 100%;
+    padding-left: calc((100% - 1170px) / 2);
+  }
+  .custom-carousel.images {
+    position: relative;
+    padding-left: calc(var(--spacing-2xl) + 132px);
+  }
+  .custom-carousel.images:before {
+    content: "";
+    position: absolute;
+    bottom: var(--spacing-l);
+    left: 0;
+    height: 299px;
+    width: 132px;
+    background: url(../../assets/images/bg/fixed-shape.svg) no-repeat 0 100% / contain;
+  }
   .custom-carousel .sc-carousel__arrow-container:first-child {
-    right: calc(35px + var(--spacing-xs));
-  }
+    right: calc(50% - (1170px / 2) + var(--spacing-2xl) + 35px + var(--spacing-xs));
+    
+  } 
   .custom-carousel .sc-carousel__arrow-container:last-child {
-    right: 0;
-  }
-  .custom-carousel {
-    padding-top: var(--spacing-xl);
-  }
+    right: calc(50% - (1170px / 2) + var(--spacing-2xl));
+  } 
   
   .custom-carousel .slide__meta {
     font-size: 18px;
