--- a/src/lib/components/TopSection/top-section.css
+++ b/src/lib/components/TopSection/top-section.css
@@ -22,6 +22,7 @@
   transition: all 0.3s;
   background: url(../../assets/images/icons/play-btn.svg) no-repeat 50% 50% / contain;
   cursor: pointer;
+  border: none;
 }
 .top-section__play-btn:hover {
   transform: scale(1.1);
@@ -39,12 +40,6 @@
   }
 }
 @media (min-width: 768px) {
-  .home .top-section__media {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-  }
   .home .top-section__media img {
     height: 100%;
     width: auto;
@@ -68,6 +63,21 @@
     max-width: 450px;
   }
 }
+@media (min-width: 992px) {
+  .home .top-section__media {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+  }
+}
+@media (min-width: 992px) and (max-width: 1279px) {
+  .top-section__video {
+    width: 500px;
+  }
+}
 @media (min-width: 1280px) {
   .top-section .text-emphasis {
     font-size: 25px;
@@ -78,5 +88,8 @@
   }
   .top-section__media {
     flex-shrink: 0;
+  }
+  .top-section__video {
+    width: 500px;
   }
 }
