--- a/src/lib/components/Popup/popup.css
+++ b/src/lib/components/Popup/popup.css
@@ -15,13 +15,14 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: rgba(0,0,0, 0.25);
+  background-color: rgba(0,0,0, 0.75);
+  border: none;
 }
 
 .popup__content {
   position: relative;
-  width: 70vw;
-  height: 80vh;
+  max-width: 70vw;
+  max-height: 80vh;
   display: flex;
   align-items: center;
   justify-content: center;
