--- a/src/routes/services/services.css
+++ b/src/routes/services/services.css
@@ -4,12 +4,17 @@
 }
 
 .logos {
+  position: relative;
+  overflow: hidden;
   margin-top: var(--spacing-m);
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: flex-start;
+  transition: all 0.5s;
 }
 .logos__item {
+  display: block;
   border: 1px solid var(--cool-gray);
   border-radius: var(--border-radius-card);
 }
@@ -24,6 +29,21 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+.logos__btn {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  padding-top: var(--spacing-m);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 100%);
+  transition: all 0.5s;
+}
+.logos__btn.hidden {
+  opacity: 0;
+  z-index: -1;
 }
 
 @media (max-width: 1279px) {
@@ -41,6 +61,7 @@
     width: auto;
   }
 }
+
 @media (min-width: 768px) and (max-width: 1279px) {
   .logos__item {
     width: calc(25% - var(--spacing-xs)*0.75);
