--- a/src/lib/components/RunningString/running-string.css
+++ b/src/lib/components/RunningString/running-string.css
@@ -1,6 +1,11 @@
 @keyframes infiniteScroll {
   0% {transform: translateX(0)}
-  100% {transform: translateX(-50%)}
+  100% {transform: translate3D(-50%, 0, 0)}
+}
+
+@keyframes infiniteScrollFReverce {
+  0% {transform: translateX(0)}
+  100% {transform: translateX(50%)}
 }
 
 .running-string {
@@ -18,11 +23,12 @@
   display: flex;
   flex-wrap: nowrap;
   gap: 144px;
+  transition: all 0.3s;
   /* animation-name: infiniteScroll;
   animation-duration: 20s;
   animation-iteration-count: infinite;
-  animation-timing-function: linear; */
-  transition: all 0.5s;
+  animation-timing-function: linear;
+  transition: all 0.5s; *//
 }
 .running-string__item {
   white-space: nowrap;
