--- a/src/lib/assets/css/form.css
+++ b/src/lib/assets/css/form.css
@@ -104,13 +104,20 @@
 
 @media (max-width: 991px) {
   .form {
+    padding-left: var(--spacing-s);
+    padding-right: var(--spacing-s);
     width: 100%;
   }
   .form__row {
     flex-direction: column;
   }
 }
-@Media (min-width: 992px) {
+@media (max-width: 767px) {
+  .form h3 {
+    font-size: 32px;
+  }
+}
+@media (min-width: 992px) {
   .form {
     width: 550px;
   }
@@ -121,5 +128,11 @@
 @media (min-width: 992px) and (max-width: 1279px) {
   .form--wide {
     width: 100%;
+  }
+}
+
+@media (min-width: 1282px) {
+  .form p {
+    font-size: 16px;
   }
 }
