--- a/src/lib/components/ImageTextRow/image-text-row.css
+++ b/src/lib/components/ImageTextRow/image-text-row.css
@@ -8,18 +8,15 @@
 }
 .image-text__col.teal {
   background-color: var(--teal);
-  background-image: url(../../assets/images/home/row-teal-bg.svg);
   background-position: 0 0;
   background-size: 76% auto;
 }
 .image-text__col.green {
   background-color: var( --deep-green);
-  background-image: url(../../assets/images/home/row-green-bg.svg);
   background-position: 100% 0;
   background-size: auto 96%;
 }
 .image-text__col.light-grey {
-  background-image: url(../../assets/images/digitalMarketing/row-img-text-bg.svg);
   background-position: 0 0;
   background-size: auto 70%;
 }
@@ -84,6 +81,11 @@
   }
   .image-text__col--img img {
     max-width: 69%;
-    max-height: 62%;
+    max-height: 78%;
+  }
+  .our-work .image-text__col--img img,
+  .industries .image-text__col--img img {
+    max-width: 100%;
+    max-height: 100%;
   }
 }
