--- a/src/lib/components/TopSection/top-section.css
+++ b/src/lib/components/TopSection/top-section.css
@@ -38,6 +38,13 @@
     align-items: center;
     justify-content: center;
   }
+
+  .top-section__play-btn {
+    width: 60px;
+    height: 60px;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
 }
 @media (min-width: 768px) {
   .home .top-section__media img {
@@ -79,6 +86,10 @@
   }
 }
 @media (min-width: 1280px) {
+ .services .top-section {
+    padding-top: var(--spacing-l);
+    padding-bottom: var(--spacing-l);
+  }
   .top-section .text-emphasis {
     font-size: 25px;
     max-width: 584px;
