--- a/src/routes/blog/blog.css
+++ b/src/routes/blog/blog.css
@@ -57,6 +57,13 @@
 .post-tags {
   padding-top: var(--spacing-m);
   border-top: 1px solid var(--cool-gray);
+  display: flex;
+  gap: var(--spacing-s);
+  font-family: "Soehne", sans-serif;
+  font-size: 16px;
+}
+.post-tags span {
+  line-height: 34px;
 }
 
 .post-hero {
@@ -69,7 +76,8 @@
   right: 0;
   top: 0;
   height: 50%;
-  background-color: light-dark(var(--white-pale), var(--dark-bg));
+  background-color: light-dark(var(--white-pale), #2D2D2D);
+  transition: all 0.3s;
 }
 .post-hero img,
 .post-img img {
@@ -85,6 +93,7 @@
   padding-bottom: var(--spacing-xs);
   font-style: italic;
   border-bottom: 1px solid var(--cool-gray);
+  font-size: 16px;
 }
 .post-row {
   display: flex;
@@ -95,9 +104,6 @@
   .post-content {
     font-size: 16px;
   }
-  .post-row {
-    flex-direction: column;
-  }
   .post-meta {
     gap: var(--spacing-xxs);
     justify-content: space-between;
@@ -105,7 +111,11 @@
 }
 @media (min-width: 768px) {
   .post-meta {
+    font-size: 20px;
     gap: var(--spacing-s);
+  }
+  .post-meta .text-light {
+    font-size: 18px;
   }
 }
 @media (min-width: 768px) and (max-width: 1279px) {
