--- a/src/routes/services/services.css
+++ b/src/routes/services/services.css
@@ -41,6 +41,9 @@
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 100%);
   transition: all 0.5s;
 }
+.dark .logos__btn {
+  background: linear-gradient(180deg, rgba(16, 15, 8, 0) 39.48%, rgba(16, 15, 8, 1) 100%);
+}
 .logos__btn.hidden {
   opacity: 0;
   z-index: -1;
@@ -52,6 +55,9 @@
   }
 }
 @media (max-width: 767px) {
+  .logos {
+    padding-bottom: 56px;
+  }
   .logos__item {
     width: calc(33% - var(--spacing-xs)*0.75);
   }
@@ -59,6 +65,17 @@
     max-width: 55px;
     max-height: 55px;
     width: auto;
+  }
+  .logos__btn {
+    padding-top: var(--spacing-l);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 50%,  rgba(255, 255, 255, 1) 100%)
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1279px) {
+  .logos {
+    padding-left: var(--spacing-l);
+    padding-right: var(--spacing-l);
   }
 }
 
