--- a/src/routes/services/services.css
+++ b/src/routes/services/services.css
@@ -35,6 +35,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  padding-bottom: 1px;
   display: flex;
   justify-content: center;
   padding-top: var(--spacing-m);
@@ -67,7 +68,7 @@
     width: auto;
   }
   .logos__btn {
-    padding-top: var(--spacing-l);
+    padding-top: var(--spacing-2xl);
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 1) 50%,  rgba(255, 255, 255, 1) 100%)
   }
 }
