--- a/src/lib/components/RunningIcons/running-icons.css
+++ b/src/lib/components/RunningIcons/running-icons.css
@@ -8,6 +8,7 @@
   overflow: hidden;
   opacity: 1;
   transition: all 0.3s;
+  display: flex;
 }
 .running-icons--light {
   opacity: 0.3;
@@ -47,10 +48,6 @@
 }
 @media (min-width: 768px) {
   .running-icons__inner {
-    animation-name: infiniteScroll;
-    animation-duration: 20s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
     gap: calc(2 * var(--spacing-s));
   }
 }
