--- a/src/lib/components/RunningString/running-string.css
+++ b/src/lib/components/RunningString/running-string.css
@@ -4,6 +4,7 @@
   color: inherit;
   font-weight: 300;
   line-height: 1.15; 
+  display: flex;
 }
 .running-string.teal,
 .section--green .running-string {
