--- a/src/lib/components/Header/header.css
+++ b/src/lib/components/Header/header.css
@@ -39,7 +39,7 @@
   0% {
     bottom: 10px;
     transform: rotate(-45deg);
-    
+
   }
   50% {
     bottom: 10px;
@@ -154,11 +154,12 @@
   border-radius: 24px;
   border-style: solid;
   border-width: 2px;
-  border-color: var(--deep-navy);
+  border-color: light-dark(var(--deep-navy), var(--white));
   cursor: pointer;
   background-color: transparent;
   outline: none;
   transition: all 0.3s;
+
 }
 .switch-theme:before,
 .switch-theme:after {
@@ -367,7 +368,7 @@
     display: block;
     animation: menuShow 0.3s linear 0.5s forwards;
   }
-  
+
   .header .address a:not(.btn):not(.logo) {
      color: inherit;
      text-decoration: none;
